--- a/Sanka.html
+++ b/Sanka.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 <!--タグはここから-->
-<table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d1278_f10000_022/65eb63bf8c80c/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0" alt=""><img src="http://www.rays-counter.com/images/counter_04.gif" border="0"><img src="http://www.rays-counter.com/images/counter_05.gif" border="0" ></td></tr></table><!--ここまで-->
+<!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr><style TYPE="text/css"><!--ul#acecounter li {margin:0px; padding:0px;}ul#acecounter li a {display:block;font-size:10px;}ul#acecounter li ul {display: none;}ul#acecounter li:hover ul {display: block;margin:0px; padding:0px;}ul#acecounter li ul li {float: none;margin:0; padding:0px;}--></style><td align="center"><a href="http://www.ace-counter.com/"><img src="http://www.ace-counter.com/d24_f6_2068/65eb670173880/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><ul id="acecounter" style="list-style-type:none; margin:0px;padding:0px;"><li><a href="#"><img src="http://www.ace-counter.com/images/acecounter.gif" border="0"></a><ul style="list-style-type:none; text-align:left;margin-left:5px;"><li><a href="http://kaden-shop.biz/">家電通販</a></li></ul></li></ul></td></tr></table><!--ここまで-->
 
     </body>
 </html>
