--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <!--タグはここから-->
 
 <a href="Sanka.html">たく様</a><table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0" alt=""><img src="http://www.rays-counter.com/images/counter_04.gif" border="0"><img src="http://www.rays-counter.com/images/counter_05.gif" border="0" ></td></tr></table><!--ここまで-->
-
+<span id="pr_pvcounter"><a href="http://pvcounter.com/" style="font-size:10px;">無料アクセスカウンター</a></span><!-- pvcounter --><script language="javascript" src="https://pvcounter.com/landing_48c5/0101-10-1-0.js" charset="utf-8"></script><noscript><a href="https://pvcounter.com/" style="font-size:10px;">無料アクセスカウンター</a></noscript><!-- pvcounter -->
     </body>
 </html>
