--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<!doctype html>
+<html lang="ja">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
         <title>404エラーページ</title>
         <script>
         </script>
