--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
         <title>404エラーページ</title>
-        <script>
-        </script>
     </head>
     <body>
-      <span id="pr_pvcounter"><a href="http://pvcounter.com/" style="font-size:10px;">無料アクセスカウンター</a></span><!-- pvcounter --><script language="javascript" src="https://pvcounter.com/landing_48c5/0101-10-1-0.js" charset="utf-8"></script><noscript><a href="https://pvcounter.com/" style="font-size:10px;">無料アクセスカウンター</a></noscript><!-- pvcounter -->
+    <!--カウンター画像からは配布サイトへリンクが設定されています。また、誤作動、誤表示の原因となりますのでコードの改変、改行は行わないで下さい。
+このコメント部分は削除して頂いても結構です。-->
+<nobr><table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><a href="https://www.stylemap.co.jp/"><img src="https://www.f-counter.net/ani1/63/1709926868/" alt="アクセスカウンター" border="0" style="margin:0px; padding:0px; border:0px; vertical-align:bottom"></a></td>
+<td><a href="https://www.stylemap.co.jp/"><img src="https://www.f-counter.net/ani2/63/1709926868/" alt="カウンターカフェ" border="0" style="margin:0px; padding:0px; border:0px; vertical-align:bottom"></a></td></tr></tbody></table></nobr>
     </body>
 </html>
