--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
         <title>404エラーページ</title>
+	
     </head>
     <body>
-<script type="text/javascript" src="http://cc2.i2i.jp/bin/count?00126327&all"></script> <noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料カウンター" /></noscript>
+<noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料カウンター" /></noscript>
  <img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料" />
 
     </body>
+	
+<script type="text/javascript" src="http://cc2.i2i.jp/bin/count?00126327&all"></script> 
 </html>
