--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <script type="text/javascript" src="http://cc2.i2i.jp/bin/count?00126327&all"></script> 
     </head>
     <body>
-<noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料カウンター" /></noscript>
+<noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料カウンター" />ゆきちは</noscript>
     </body>
 </html>
