--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
         <title>404エラーページ</title>
-	
-	
-<script type="text/javascript" src="http://cc2.i2i.jp/bin/count?00126327&all"></script> 
     </head>
     <body>
-<noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料カウンター" />ゆきちは</noscript>
+
+<script type="text/javascript" src="http://cc2.i2i.jp/bin/count?00126327&all"></script> <noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料カウンター" />ゆきちは</noscript>
     </body>
 </html>
