--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
         <title>404エラーページ</title>
     </head>
     <body>
-<img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料カウンター" />
-<noscript>ゆきちは</noscript>
+<script type="text/javascript" src="http://cc2.i2i.jp/bin/count?00126327&all"></script>
+<noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料カウンター" /></noscript>
     </body>
 <style>
 	body{
 	background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8SesAg0hz7QQQo1X28k5baAXRowWH7K5VbZg_s8vlIuHyQn-YCPmmuAc&s=10); /* 背景画像 */
 	}
 </style>	
-	<script type="text/javascript" src="http://cc2.i2i.jp/bin/count?00126327&all"></script>
 </html>
