--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
 <script type="text/javascript" src="http://cc2.i2i.jp/bin/count?00126327&all"></script>
 <noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料カウンター" /></noscript>
+<img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料" />
     </body>
 <style>
 	body{
