--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
         <title>404エラーページ</title>
     </head>
     <body>
-<script type="text/javascript" src="http://cc2.i2i.jp/bin/count?00126327&all"></script>
+<script type="text/javascript" src="http://any.i2i.jp/cc.php?sub=cc&sno=cc2.i2i.jp&type=count&idname=00126327&mode=all"></script>
 <noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料カウンター" /></noscript>
-<img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料" />
-    </body>
+</body>
 <style>
 	body{
 	background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8SesAg0hz7QQQo1X28k5baAXRowWH7K5VbZg_s8vlIuHyQn-YCPmmuAc&s=10); /* 背景画像 */
