--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>404エラーページ</title>
     </head>
     <body>
-<script type="text/javascript" src="http://any.i2i.jp/cc.php?sub=cc&sno=cc2.i2i.jp&type=count&idname=00126327&mode=all"></script>
-<noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126327/all/" border="0" alt="無料カウンター" /></noscript>
+<script type="text/javascript" src="http://cc2.i2i.jp/bin/count?00126328&all"></script>
+<noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126328/all/" border="0" alt="無料カウンター" /></noscript>
 </body>
 <style>
 	body{
