--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <body>
 <script type="text/javascript" src="http://cc2.i2i.jp/bin/count?00126328&all"></script>
 <noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126328/all/" border="0" alt="無料カウンター" /></noscript>
-</body>
+<img src="http://cc2.i2i.jp/bin/mcount.x/00126328/all/" border="0" alt="無料" />
+
+    </body>
 <style>
 	body{
 	background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8SesAg0hz7QQQo1X28k5baAXRowWH7K5VbZg_s8vlIuHyQn-YCPmmuAc&s=10); /* 背景画像 */
