--- a/index.html
+++ b/index.html
@@ -3,17 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-        <title>404エラーページ</title>
+        <title>ダウンロード</title>
     </head>
     <body>
-<script type="text/javascript" src="http://cc2.i2i.jp/bin/count?00126328&all"></script>
-<noscript><img src="http://cc2.i2i.jp/bin/mcount.x/00126328/all/" border="0" alt="無料カウンター" /></noscript>
-<img src="http://cc2.i2i.jp/bin/mcount.x/00126328/all/" border="0" alt="無料" />
-
+<a href="./test.zip" download>
+	<button style="padding: 5px">画像をダウンロード</button>
+</a>
     </body>
-<style>
-	body{
-	background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8SesAg0hz7QQQo1X28k5baAXRowWH7K5VbZg_s8vlIuHyQn-YCPmmuAc&s=10); /* 背景画像 */
-	}
-</style>	
 </html>
