--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 <a href="./test.zip" download>
-	<button style="padding: 5px">画像をダウンロード</button>
+	<button style="padding: 5px">ダウンロード</button>
 </a>
     </body>
 </html>
