--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>ダウンロード</title>
     </head>
     <body>
-<a href="./test.zip" download>
+<a href="./test.zip" download="テンプレート.zip">
 	<button style="padding: 5px">ダウンロード</button>
 </a>
     </body>
