--- a/download.html
+++ b/download.html
@@ -14,8 +14,8 @@
 
 <script>
 // GitHubリポジトリの所有者とリポジトリ名
-const owner = 'owner';
-const repo = 'repository';
+const owner = 'akaina0112';
+const repo = 'Test';
 
 // GitHubのAPIエンドポイント
 const apiUrl = `https://api.github.com/repos/${owner}/${repo}/releases`;
