--- a/download.html
+++ b/download.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GitHub Releases Download Count</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GitHub Releases</title>
 </head>
 <body>
-<h1>GitHub Releases Download Count</h1>
+    <div id="download-count"></div>
 
-<div id="downloadInfo">
-  <!-- ダウンロード情報がここに挿入されます -->
-</div>
+    <script>
+          const owner = 'akaina0112'; // GitHubリポジトリの所有者名
+        const repo = 'Test'; // GitHubリポジトリの名前
 
-<script>
-// GitHubリポジトリの所有者とリポジトリ名
-const owner = 'akaina0112';
-const repo = 'Test';
+        function fetchDownloadCount() {
+            fetch(`https://api.github.com/repos/${owner}/${repo}/releases`)
+                .then(response => response.json())
+                .then(data => {
+                    let totalDownloadCount = 0;
+                    data.forEach(release => {
+                        totalDownloadCount += release.assets.reduce((acc, asset) => acc + asset.download_count, 0);
+                    });
+                    document.getElementById('download-count').innerText = `Total Downloads: ${totalDownloadCount}`;
+                })
+                .catch(error => {
+                    console.error('Error fetching download count:', error);
+                });
+        }
 
-// GitHubのAPIエンドポイント
-const apiUrl = `https://api.github.com/repos/${owner}/${repo}/releases`;
+        // 初期読み込み時にダウンロード数を取得
+        fetchDownloadCount();
 
-// GitHubのAPIを呼び出してリリース情報を取得し、ダウンロード数をHTMLに書き込む
-fetch(apiUrl)
-    .then(response => response.json())
-    .then(releases => {
-        let downloadInfoHTML = '';
-        releases.forEach(release => {
-            let totalDownloads = 0;
-            release.assets.forEach(asset => {
-                totalDownloads += asset.download_count;
-            });
-            const downloadButtonHTML = `<a href="${release.html_url}" download>Download ${release.name || 'Release'}</a>`;
-            const downloadCountHTML = `<span>ダウンロード数: ${totalDownloads.toLocaleString()}</span>`;
-            downloadInfoHTML += `<div>${downloadButtonHTML} ${downloadCountHTML}</div>`;
-        });
-        document.getElementById('downloadInfo').innerHTML = downloadInfoHTML;
-    })
-    .catch(error => console.error('Error fetching release information:', error));
-</script>
-
+        // 30秒ごとにダウンロード数を更新
+        setInterval(fetchDownloadCount, 30000);
+    </script>
 </body>
 </html>
