--- a/download.html
+++ b/download.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub Releases</title>
+        <style>
+        /* ダウンロードボタンに適用されるスタイル */
+        .download-button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            transition: all 0.3s ease; /* ホバー時のトランジション */
+        }
+
+        /* ボタンがホバーされたときのスタイル */
+        .download-button:hover {
+            transform: scale(1.1); /* ボタンの拡大 */
+        }
+    </style>
 </head>
 <body>
     <div id="download-count"></div>
