--- a/download.html
+++ b/download.html
@@ -43,9 +43,8 @@
                     });
                     const releaseInfoHTML = `
                         <div class="release-info">
-                            <h2>${fileName}</h2>
                             <div class="download-info">
-                                <p>${fileName}: ${downloadCount} downloads</p>
+                                <p> ${downloadCount} 数</p>
                                 <button class="download-button" onclick="downloadAsset('${downloadUrl}')">Download</button>
                             </div>
                         </div>`;
