--- a/download.html
+++ b/download.html
@@ -26,7 +26,7 @@
         function fetchReleaseInfo() {
             const owner = 'akaina0112'; // GitHubリポジトリの所有者名
             const repo = 'Test'; // GitHubリポジトリの名前
-            const fileName = 'example.zip'; // ダウンロード数を取得したいファイル名
+            const fileName = '20230704_185437.jpg'; // ダウンロード数を取得したいファイル名
 
             fetch(`https://api.github.com/repos/${owner}/${repo}/releases`)
                 .then(response => response.json())
