--- a/download.html
+++ b/download.html
@@ -47,7 +47,7 @@
                         <div class="release-info">
                             <div class="download-info">
                                 <button class="download-button" onclick="downloadAsset('${downloadUrl}')">Download</button>
-                                <p>ダウンロード数: ${downloadCount}</p>
+                                <p>: ${downloadCount}DL</p>
                             </div>
                         </div>`;
                     document.getElementById('release-info').innerHTML = releaseInfoHTML;
