--- a/download.html
+++ b/download.html
@@ -25,6 +25,7 @@
     <div id="release-info1"></div>
     <div id="release-info2"></div>
     <div id="release-info3"></div>
+    <div id="release-info4"></div>
 
     <script src="githubConfig.js"></script>
     <script src="fileConfig.js"></script>
