--- a/download.html
+++ b/download.html
@@ -8,12 +8,7 @@
         .release-info {
             display: flex;
             align-items: center;
-        }
-
-        .download-info {
-            margin-left: 10px;
-            display: flex;
-            align-items: center;
+            margin-bottom: 10px;
         }
 
         .download-button {
@@ -24,71 +19,45 @@
 <body>
     <div id="release-info"></div>
 
-    <script src="githubAndFileConfig.js"></script>
     <script>
-        function fetchReleaseInfo() {
-            const { owner, repo } = githubConfig;
-            const { fileNames } = fileConfig;
+        async function fetchReleaseInfo() {
+            const { owner, repo } = { owner: 'akaina0112', repo: 'Test' }; // GitHubのオーナー名とリポジトリ名を入力してください
+            const fileNames = ['20230704_185437.jpg', '20230704_185437.jpg']; // ダウンロード数を取得したいファイル名を指定してください
 
-            fileNames.forEach((fileName, index) => {
-                fetchFileData(fileName, owner, repo)
-                    .then(fileData => {
-                        displayReleaseInfo(fileData, index + 1);
-                    })
-                    .catch(error => {
-                        console.error(`Error fetching ${fileName} info:`, error);
-                    });
-            });
+            const releaseInfoContainer = document.getElementById('release-info');
+            releaseInfoContainer.innerHTML = ''; // 前回のリリース情報をクリア
+
+            for (const fileName of fileNames) {
+                try {
+                    const releaseData = await fetch(`https://api.github.com/repos/${owner}/${repo}/releases`);
+                    const releases = await releaseData.json();
+                    let downloadCount = 0;
+                    let downloadUrl = '';
+
+                    for (const release of releases) {
+                        for (const asset of release.assets) {
+                            if (asset.name === fileName) {
+                                downloadCount += asset.download_count;
+                                downloadUrl = asset.browser_download_url;
+                            }
+                        }
+                    }
+
+                    const releaseInfo = `
+                        <div class="release-info">
+                            <p>ダウンロード数: ${downloadCount}</p>
+                            <button class="download-button" onclick="window.open('${downloadUrl}', '_blank')">Download ${fileName}</button>
+                        </div>`;
+                    releaseInfoContainer.innerHTML += releaseInfo;
+                } catch (error) {
+                    console.error(`Error fetching ${fileName} info:`, error);
+                }
+            }
         }
 
-        function fetchFileData(fileName, owner, repo) {
-            return new Promise((resolve, reject) => {
-                fetch(`https://api.github.com/repos/${owner}/${repo}/releases`)
-                    .then(response => response.json())
-                    .then(data => {
-                        let downloadCount = 0;
-                        let downloadUrl = '';
-                        data.forEach(release => {
-                            release.assets.forEach(asset => {
-                                if (asset.name === fileName) {
-                                    downloadCount += asset.download_count;
-                                    downloadUrl = asset.browser_download_url;
-                                }
-                            });
-                        });
-                        const fileData = {
-                            fileName: fileName,
-                            downloadCount: downloadCount,
-                            downloadUrl: downloadUrl
-                        };
-                        resolve(fileData);
-                    })
-                    .catch(error => {
-                        reject(error);
-                    });
-            });
-        }
+        fetchReleaseInfo(); // 初回読み込み時にリリース情報を取得
 
-        function displayReleaseInfo(fileData, index) {
-            const releaseInfoHTML = `
-                <div class="release-info">
-                    <div class="download-info">
-                        <p>ダウンロード数: ${fileData.downloadCount}</p>
-                        <button class="download-button" onclick="downloadAsset('${fileData.downloadUrl}')">Download ${fileData.fileName}</button>
-                    </div>
-                </div>`;
-            document.getElementById('release-info').insertAdjacentHTML('beforeend', releaseInfoHTML);
-        }
-
-        function downloadAsset(url) {
-            window.open(url, '_blank');
-        }
-
-        // 初期読み込み時にリリース情報を取得
-        fetchReleaseInfo();
-
-        // 30秒ごとにリリース情報を更新
-        setInterval(fetchReleaseInfo, 30000);
+        setInterval(fetchReleaseInfo, 30000); // 30秒ごとにリリース情報を更新
     </script>
 </body>
 </html>
