--- a/download.html
+++ b/download.html
@@ -8,7 +8,12 @@
         .release-info {
             display: flex;
             align-items: center;
-            margin-bottom: 10px;
+        }
+
+        .download-info {
+            margin-left: 10px;
+            display: flex;
+            align-items: center;
         }
 
         .download-button {
@@ -17,47 +22,89 @@
     </style>
 </head>
 <body>
-    <div id="release-info"></div>
+    <div id="release-info1"></div>
+    <div id="release-info2"></div>
 
     <script>
-        async function fetchReleaseInfo() {
-            const { owner, repo } = { owner: 'akaina0112', repo: 'Test' }; // GitHubのオーナー名とリポジトリ名を入力してください
-            const fileNames = ['20230704_185437.jpg', '20230704_185437.jpg']; // ダウンロード数を取得したいファイル名を指定してください
+        const owner = 'akaina0112'; // GitHubリポジトリの所有者名
+        const repo = 'Test'; // GitHubリポジトリの名前
 
-            const releaseInfoContainer = document.getElementById('release-info');
-            releaseInfoContainer.innerHTML = ''; // 前回のリリース情報をクリア
+        function fetchReleaseInfo() {
+            const fileName1 = '20230704_185437.jpg'; // ファイル1の名前
+            const fileName2 = 'example.zip'; // ファイル2の名前
 
-            for (const fileName of fileNames) {
-                try {
-                    const releaseData = await fetch(`https://api.github.com/repos/${owner}/${repo}/releases`);
-                    const releases = await releaseData.json();
-                    let downloadCount = 0;
-                    let downloadUrl = '';
-
-                    for (const release of releases) {
-                        for (const asset of release.assets) {
-                            if (asset.name === fileName) {
-                                downloadCount += asset.download_count;
-                                downloadUrl = asset.browser_download_url;
-                            }
-                        }
-                    }
-
-                    const releaseInfo = `
-                        <div class="release-info">
-                            <p>ダウンロード数: ${downloadCount}</p>
-                            <button class="download-button" onclick="window.open('${downloadUrl}', '_blank')">Download ${fileName}</button>
-                        </div>`;
-                    releaseInfoContainer.innerHTML += releaseInfo;
-                } catch (error) {
-                    console.error(`Error fetching ${fileName} info:`, error);
-                }
-            }
+            // ファイル1の情報を取得
+            fetchFileData(fileName1)
+                .then(file1Data => {
+                    // ファイル2の情報を取得
+                    fetchFileData(fileName2)
+                        .then(file2Data => {
+                            // リリース情報を表示
+                            displayReleaseInfo(file1Data, file2Data);
+                        })
+                        .catch(error => {
+                            console.error('Error fetching file2 info:', error);
+                        });
+                })
+                .catch(error => {
+                    console.error('Error fetching file1 info:', error);
+                });
         }
 
-        fetchReleaseInfo(); // 初回読み込み時にリリース情報を取得
+        function fetchFileData(fileName) {
+            return new Promise((resolve, reject) => {
+                fetch(`https://api.github.com/repos/${owner}/${repo}/releases`)
+                    .then(response => response.json())
+                    .then(data => {
+                        let downloadCount = 0;
+                        let downloadUrl = '';
+                        data.forEach(release => {
+                            release.assets.forEach(asset => {
+                                if (asset.name === fileName) {
+                                    downloadCount += asset.download_count;
+                                    downloadUrl = asset.browser_download_url;
+                                }
+                            });
+                        });
+                        const fileData = {
+                            fileName: fileName,
+                            downloadCount: downloadCount,
+                            downloadUrl: downloadUrl
+                        };
+                        resolve(fileData);
+                    })
+                    .catch(error => {
+                        reject(error);
+                    });
+            });
+        }
 
-        setInterval(fetchReleaseInfo, 30000); // 30秒ごとにリリース情報を更新
+        function displayReleaseInfo(file1Data, file2Data) {
+            const releaseInfoHTML1 = `
+                <div class="release-info">
+                    <div class="download-info">
+                        <p>ダウンロード数: ${file1Data.downloadCount}</p>
+                        <button class="download-button" onclick="downloadAsset('${file1Data.downloadUrl}')">Download ${file1Data.fileName}</button>
+                    </div>
+                </div>`;
+            document.getElementById('release-info1').innerHTML = releaseInfoHTML1;
+
+            const releaseInfoHTML2 = `
+                <div class="release-info">
+                    <div class="download-info">
+                        <p>ダウンロード数: ${file2Data.downloadCount}</p>
+                        <button class="download-button" onclick="downloadAsset('${file2Data.downloadUrl}')">Download ${file2Data.fileName}</button>
+                    </div>
+                </div>`;
+            document.getElementById('release-info2').innerHTML = releaseInfoHTML2;
+        }
+
+        function downloadAsset(url) {
+            window.open(url, '_blank');
+        }
+
+        // 初期読み込み時にリリース情報を取得
+        fetchReleaseInfo();
     </script>
 </body>
 </html>
